# tinygraphX_rust

./: .gitignore  Cargo.toml  README.md  TODO.md  scene.json  scene_test.json
src/: lib.rs  light.rs  main.rs  scene.rs  scene_builder.rs  wavefront.rs
src/shapes/: checkboard_disk.rs  disk.rs  material.rs  mesh.rs  mod.rs  plane.rs  polygon.rs  shape.rs  sphere.rs
