[package]
name = "tinygraph_x"
version = "0.1.0"
authors = ["Nicolas Zordan <nicolas.zordan.tek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
num-traits = "0.2"
cgmath = { version = "0.18", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"